--- a/apps/contracts/package.json
+++ b/apps/contracts/package.json
@@ -27,6 +27,7 @@
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
     "typescript": "~5.0.4",
+    "@openzeppelin/contracts": "^5.4.0",
     "viem": "^2.7.6"
   }
 }
