--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -14,6 +14,7 @@
     "@coinbase/cdp-react": "^0.0.28",
     "@coinbase/cdp-sdk": "^1.36.1",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -21,8 +22,10 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-tooltip": "^5.29.1",
     "react-type-animation": "^3.2.0",
     "sonner": "^2.0.7",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
