--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -9,35 +9,42 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@coinbase/cdp-core": "^0.0.28",
-    "@coinbase/cdp-hooks": "^0.0.28",
-    "@coinbase/cdp-react": "^0.0.28",
-    "@coinbase/cdp-sdk": "^1.36.1",
-    "@heroicons/react": "^2.2.0",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-slot": "^1.2.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.543.0",
+    "@coinbase/cdp-core": "0.0.28",
+    "@coinbase/cdp-hooks": "0.0.28",
+    "@coinbase/cdp-react": "0.0.28",
+    "@coinbase/cdp-sdk": "1.36.1",
+    "@heroicons/react": "2.2.0",
+    "@hookform/resolvers": "5.2.1",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "2.1.7",
+    "@radix-ui/react-slot": "1.2.3",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "lucide-react": "0.543.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-tooltip": "^5.29.1",
-    "react-type-animation": "^3.2.0",
-    "sonner": "^2.0.7",
-    "swr": "^2.3.6",
-    "tailwind-merge": "^3.3.1"
+    "react-hook-form": "7.62.0",
+    "react-qr-code": "2.0.18",
+    "react-tooltip": "5.29.1",
+    "react-type-animation": "3.2.0",
+    "sonner": "2.0.7",
+    "swr": "2.3.6",
+    "tailwind-merge": "3.3.1",
+    "zod": "3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "3",
+    "@tailwindcss/postcss": "4",
+    "@types/node": "20",
+    "@types/react": "19",
+    "@types/react-dom": "19",
+    "eslint": "9",
     "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.8",
-    "typescript": "^5"
+    "tailwindcss": "4",
+    "tw-animate-css": "1.3.8",
+    "typescript": "5"
   }
 }
