--- a/apps/contracts/package.json
+++ b/apps/contracts/package.json
@@ -19,6 +19,7 @@
     "@nomicfoundation/hardhat-toolbox-viem": "^4.1.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@nomicfoundation/hardhat-viem": "^2.0.0",
+    "@openzeppelin/contracts": "5.4.0",
     "@types/chai": "^4.2.0",
     "@types/chai-as-promised": "^7.1.6",
     "@types/mocha": ">=9.1.0",
@@ -29,7 +30,6 @@
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
     "typescript": "~5.0.4",
-    "@openzeppelin/contracts": "^5.4.0",
     "viem": "^2.7.6"
   }
 }
