--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -15,6 +15,7 @@
     "@coinbase/cdp-sdk": "1.36.1",
     "@heroicons/react": "2.2.0",
     "@hookform/resolvers": "5.2.1",
+    "@metamask/jazzicon": "2.0.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -24,6 +25,7 @@
     "clsx": "2.1.1",
     "lucide-react": "0.543.0",
     "next": "15.5.2",
+    "pinata": "2.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "7.62.0",
