fix build, connect onramp

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.543.0",
+    "minimatch": "10.0.3",
     "next": "15.5.2",
     "pinata": "2.5.0",
     "react": "19.1.0",
