--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -37,6 +37,7 @@
     "sonner": "2.0.7",
     "swr": "2.3.6",
     "tailwind-merge": "3.3.1",
+    "tsparticles": "3.9.1",
     "zod": "3"
   },
   "devDependencies": {
