--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -6,6 +6,9 @@ NEXT_PUBLIC_RPC_URL="https://base-mainnet.g.alchemy.com/v2/..."
 NEXT_PUBLIC_EXPLORER_BASE_URL="https://base.blockscout.com/"
 NEXT_PUBLIC_DISTRIBUTOR_ADDRESS="0xDfAaEA35963d61369F4c74Be10aDF23da36E1264"
 NEXT_PUBLIC_USDC_ADDRESS="0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913"
+NEXT_PUBLIC_SUBGRAPH_URL="https://api.studio.thegraph.com/..."
+NEXT_PUBLIC_SUBGRAPH_API_KEY="..."
+
 
 # Shared config
 NEXT_PUBLIC_PINATA_JWT="..."
@@ -30,6 +33,8 @@ CDP_API_SECRET="..."
 # NEXT_PUBLIC_USDC_ADDRESS="0x036CbD53842c5426634e7929541eC2318f3dCF7e"
 # NEXT_PUBLIC_SUBGRAPH_URL=""
 # NEXT_PUBLIC_SUBGRAPH_API_KEY=""
+# NEXT_PUBLIC_SUBGRAPH_URL="https://api.studio.thegraph.com/..."
+# NEXT_PUBLIC_SUBGRAPH_API_KEY="..."
 
 # # Shared config
 # NEXT_PUBLIC_PINATA_JWT="..."
