--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -39,6 +39,7 @@
     "swr": "2.3.6",
     "tailwind-merge": "3.3.1",
     "tsparticles": "3.9.1",
+    "viem": "^2.7.6",
     "zod": "3"
   },
   "devDependencies": {
