sql api integration and smart wallets cleanup

--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -20,6 +20,7 @@ NEXT_PUBLIC_CDP_PROJECT_ID="..."
 NEXT_PUBLIC_CDP_CREATE_ACCOUNT_TYPE="evm-smart"
 NEXT_PUBLIC_CDP_ONRAMP_BASE_URL="https://pay.coinbase.com"
 NEXT_PUBLIC_CDP_BUNDLER_URL="https://api.developer.coinbase.com/rpc/v1/base/..."
+NEXT_PUBLIC_CDP_CLIENT_API_KEY="..."
 CDP_API_KEY="..."
 CDP_API_SECRET="..."
 
@@ -46,6 +47,7 @@ CDP_API_SECRET="..."
 # NEXT_PUBLIC_CDP_CREATE_ACCOUNT_TYPE="evm-smart"
 # NEXT_PUBLIC_CDP_ONRAMP_BASE_URL="https://pay-sandbox.coinbase.com"
 # NEXT_PUBLIC_CDP_BUNDLER_URL="https://api.developer.coinbase.com/rpc/v1/base-sepolia/..."
+# NEXT_PUBLIC_CDP_CLIENT_API_KEY="..."
 # CDP_API_KEY="188e01..."
 # CDP_API_SECRET="..."
 
