--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -3,7 +3,7 @@
 # network config
 NEXT_PUBLIC_NETWORK="base"
 NEXT_PUBLIC_RPC_URL="https://base-mainnet.g.alchemy.com/v2/..."
-NEXT_PUBLIC_EXPLORER_BASE_URL="https://base.blockscout.com/"
+NEXT_PUBLIC_EXPLORER_BASE_URL="https://basescan.org"
 NEXT_PUBLIC_DISTRIBUTOR_ADDRESS="0xDfAaEA35963d61369F4c74Be10aDF23da36E1264"
 NEXT_PUBLIC_USDC_ADDRESS="0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913"
 NEXT_PUBLIC_SUBGRAPH_URL="https://api.studio.thegraph.com/..."
